infoshare-back/build_error_utf8.log

> Task :compileJava
.\gradlew.bat : C:\Users\user\
Desktop\04.Project_self\01.Inf
omationSharePage\infoshare-bac
k\src\main\java\com\infoshare\
controller\PostController.java
:3: error: cannot find symbol
위치 줄:1 문자:1
+ .\gradlew.bat classes --cons
ole=plain 2>&1 | Out-File -Enc
oding utf8  ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo          : 
    NotSpecified: (C:\Users\  
  user\D...not find symbol:   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
import com.infoshare.dto.reque
st.PostCreateRequest;
                              
  ^
  symbol:   class PostCreateRe
quest
  location: package com.infosh
are.dto.request
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\controller\PostC
ontroller.java:4: error: canno
t find symbol
import com.infoshare.dto.respo
nse.PostResponse;
                              
   ^
  symbol:   class PostResponse
  location: package com.infosh
are.dto.response
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\controller\PostC
ontroller.java:5: error: canno
t find symbol
import com.infoshare.service.P
ostService;
                            ^
  symbol:   class PostService
  location: package com.infosh
are.service
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\controller\PostC
ontroller.java:19: error: cann
ot find symbol
    private final PostService 
postService;
                  ^
  symbol:   class PostService
  location: class PostControll
er
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\controller\PostC
ontroller.java:26: error: cann
ot find symbol
    public ResponseEntity<Post
Response> createPost(@ModelAtt
ribute PostCreateRequest reque
st) {
                              
                              
       ^
  symbol:   class PostCreateRe
quest
  location: class PostControll
er
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\controller\PostC
ontroller.java:26: error: cann
ot find symbol
    public ResponseEntity<Post
Response> createPost(@ModelAtt
ribute PostCreateRequest reque
st) {
                          ^
  symbol:   class PostResponse
  location: class PostControll
er
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\controller\PostC
ontroller.java:16: error: cann
ot find symbol
@RequiredArgsConstructor
^
  symbol:   class PostService
  location: class PostControll
er
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\repository\PostM
apper.java:3: error: cannot fi
nd symbol
import com.infoshare.domain.Po
st;
                           ^
  symbol:   class Post
  location: package com.infosh
are.domain
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\repository\PostM
apper.java:4: error: cannot fi
nd symbol
import com.infoshare.domain.Po
stTag;
                           ^
  symbol:   class PostTag
  location: package com.infosh
are.domain
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\repository\PostM
apper.java:12: error: cannot f
ind symbol
    void insertPost(Post post)
;
                    ^
  symbol:   class Post
  location: interface PostMapp
er
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\repository\PostM
apper.java:14: error: cannot f
ind symbol
    void insertPostTags(List<P
ostTag> tags);
                             ^
  symbol:   class PostTag
  location: interface PostMapp
er
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\service\PostServ
ice.java:3: error: cannot find
 symbol
import com.infoshare.domain.Po
st;
                           ^
  symbol:   class Post
  location: package com.infosh
are.domain
C:\Users\user\Desktop\04.Proje
ct_self\01.InfomationSharePage
\infoshare-back\src\main\java\
com\infoshare\service\PostServ
ice.java:4: error: cannot find
 symbol
import com.infoshare.domain.Po
stTag;
                           ^
  symbol:   class PostTag
  location: package com.infosh
are.domain
13 errors

> Task :compileJava FAILED

FAILURE: Build failed with an 
exception.

* What went wrong:
Execution failed for task ':co
mpileJava'.
> Compilation failed; see the 
compiler error output for deta
ils.

* Try:
> Run with --info option to ge
t more log output.
> Run with --scan to get full 
insights.

BUILD FAILED in 3s
1 actionable task: 1 executed
